# evidenceforecast

./: .gitignore  pyproject.toml
configs/picos/: empareg_t2dm.yaml  sglt2i_hfpef.yaml  tirzepatide_hfpef_acm.yaml
evidence_forecast/: __init__.py  _cardiosynth_adapter.py  constants.py  effect_layer.py  pico_spec.py  representativeness.py
tests/: conftest.py  test_effect_layer.py  test_pico_spec.py  test_representativeness.py
tests/contracts/: test_pico_yamls.py
